--- a/integrateBot/domain.yml
+++ b/integrateBot/domain.yml
@@ -1,27 +1,12 @@
-actions:
-- utter_afirm
-- utter_branchList
-- utter_branch_name_entry
-- utter_branch_type_entry
-- utter_commitMsg
-- utter_commit_by_branch
-- utter_commit_by_user
-- utter_create_space
-- utter_error_query_entry
-- utter_get_pages_in_a_space
-- utter_goodbye
-- utter_greet
-- utter_info_of_a_space
-- utter_info_of_all_spaces
-- utter_message_entry
-- utter_owner_name_entry
-- utter_repoList
-- utter_repo_name_entry
-- utter_searchErrors
-- utter_space_key_entry
-- utter_space_name_entry
-- utter_user_name_entry
-- utter_watcherList
+
+forms:
+- commit_msg_form
+- error_search_form
+- repo_list_form
+- watcher_list_form
+- branch_list_form
+- commit_by_branch_form
+- commit_by_user_form  
 entities:
 - bitbucket_action
 - branch_name
@@ -37,6 +22,9 @@ entities:
 - search_key
 - space
 - user_name
+- body
+- title
+- file_name
 intents:
 - create_space
 - info_of_a_space
@@ -45,8 +33,8 @@ intents:
 - commit_by_user
 - info_of_all_spaces
 - repo_name_entry
-- commitMsg
-- watcherList
+- commit_msg
+- watcher_list
 - greet
 - goodbye
 - affirm
@@ -58,17 +46,22 @@ intents:
 - branch_name_entry
 - user_name_entry
 - branch_type_entry
-- searchErrors
+- error_search
 - error_query_entry
-- repoList
-- branchList
+- repo_list
+- branch_list
+- create_page
+- title_entry
+- body_entry
+- export_page_as_pdf
+- file_name_entry
 responses:
   utter_afirm:
   - text: You just affirmed
   utter_branchList:
   - text: 'List of all the branches on repo: {repo_name}'
-  utter_branch_name_entry:
-  - text: The branch name was {branch_name}
+  utter_ask_branch_name:
+  - text: What is The branch name? 
   utter_branch_type_entry:
   - text: 'The branch type was stated to be : {branch_type}'
   utter_commitMsg:
@@ -79,8 +72,8 @@ responses:
   - text: 'You want to check for commit by user: {user_name}'
   utter_create_space:
   - text: 'you wish to create space with name: {space} key: {key}'
-  utter_error_query_entry:
-  - text: The query is {error_query}
+  utter_ask_error_query:
+  - text: What is the error query
   utter_get_pages_in_a_space:
   - text: 'You want all pages in a space with name: {space}'
   utter_goodbye:
@@ -91,14 +84,14 @@ responses:
   - text: 'You want info of space with key: {key}'
   utter_info_of_all_spaces:
   - text: You want info of all spaces
-  utter_message_entry:
-  - text: 'You just spoke a commit message: {message}'
-  utter_owner_name_entry:
-  - text: The owner is {owner_name}
+  utter_ask_message:
+  - text: What was the commit message
+  utter_ask_owner_name:
+  - text: Who is The owner
   utter_repoList:
   - text: List of all repos
-  utter_repo_name_entry:
-  - text: The repo nae was given as {repo_name}
+  utter_ask_repo_name:
+  - text: what is the name of the repo
   utter_searchErrors:
   - text: 'You want solution on issue: {error_query}'
   utter_space_key_entry:
@@ -139,3 +132,12 @@ slots:
     type: text
   user_name:
     type: text
+
+  body: 
+    type: text
+  title:
+    type: text
+
+  file_name:
+    type: unfeaturized
+
